<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
          <Button
              android:id="@+id/suffleBtn"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:contentDescription="@string/shuffle_btn"
              style="@style/Widget.AppCompat.Button.Borderless"
              android:drawableTop="@drawable/shuffleicon"
              android:text="@string/shuffle_btn"
              android:textColor="@color/black"
              android:textAllCaps="false"
              android:layout_weight="1"/>
           <Button
               android:id="@+id/favouriteBtn"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:contentDescription="@string/favourites_btn"
               android:drawableTop="@drawable/favoriteicon"
               android:text="@string/favourites_btn"
               android:textColor="@color/black"
               android:textAllCaps="false"
               android:layout_weight="1"/>
           <Button
               android:id="@+id/playlistBtn"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:contentDescription="@string/playlist_btn"
               android:drawableTop="@drawable/playlisticon"
               android:textAllCaps="false"
               android:text="@string/playlist_btn"
               android:textColor="@color/black"
               android:layout_weight="1"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/total_songs"
           android:id="@+id/total_songs"
           android:textColor="@color/black"
           android:layout_margin="10dp"/>
       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/musicMV"

           />
   </LinearLayout>
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
   android:layout_gravity="left"
    android:fitsSystemWindows="true"
android:id="@+id/navigationview"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/nav_menu"
    />
</androidx.drawerlayout.widget.DrawerLayout>